Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109504

[REG 6.4.2->6.5.0] windows namespace build fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.4.3
    • 6.5.0 Beta1
    • Build System: CMake
    • Windows
    • a1dd5ff5c (6.4)

      Have Qt 6.5.0 sources, do a namespace build:

      configure

      cmake -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -DCMAKE_BUILD_TYPE=Release -DQT_BUILD_EXAMPLES=OFF -DOPENSSL_ROOT_DIR=C:\openssl\include\.. -DFEATURE_system_zlib=OFF -DFEATURE_system_tiff=OFF -DFEATURE_system_freetype=OFF -DFEATURE_system_jpeg=OFF -DQT_BUILD_TESTS=OFF -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DQT_NAMESPACE=RTA C:\Users\qt\RTA\s -DCMAKE_INSTALL_PREFIX:PATH=C:\Users\qt\RTA\s\qtbase
      

      compile: cmake --build . --parallel

      Fails, not sure what is the actual error code, please check attached log (last 1000 lines, I'll provide full log if this is not enough)

      Fails also on MSVC2019 x64

        1. 650_mingw_namespace_2.7z
          12 kB
          Johanna Äijälä
        2. 650_mingw_namespace.7z
          6 kB
          Johanna Äijälä
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semlanik Alexey Edelev
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes