Fix namespace issues

Fixes: QTBUG-109504
Change-Id: I117eed1ccb6886349eb21185a5c7fefb03bbc561
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 4088598ca61aef8793d1b255409a58532fb463f9)